--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "gsap": "^3.13.0",
     "jquery": "^3.7.1",
     "jqueryui": "^1.11.1",
+    "jsmediatags": "^3.9.7",
     "klona": "^2.0.6",
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
