--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jquery": "^3.7.1",
     "jqueryui": "^1.11.1",
     "jsmediatags": "^3.9.7",
+    "json-logic-js": "^2.0.5",
     "klona": "^2.0.6",
     "lodash": "^4.17.21",
     "pinia": "^3.0.4",
